--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,160 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(https://fonts.googleapis.com/css?family=Satisfy); 
+@import url(https://fonts.googleapis.com/css?family=Six+Caps);
+
+* {
+  margin: 20;
+  padding: 20;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body .background {
+  background-size: 100%;
+  height: 100%;
+  position: relative;
 }
+
+#wrapper {
+  min-height: 100vh; /* will cover the 100% of viewport */
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 50px; /* height of your footer */
+ }
+
+/* a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color:#FFE4C4;
+} */
+
+/*-- Header --*/
+#header {
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 200px;
+  padding: 20px;
+  font-family: 'Satisfy', cursive;
+}
+
+header .headerName a {
+  font-size: 150px;
+  color: white;
+  text-align: center;
+  position: relative;
+  padding: 0 10px 0 30px;
+}
+
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 10px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  margin: 30px;
+  font-weight: lighter;
+  font-size: 32px;
+  text-shadow: 6px 6px 6px black;
+  cursor: pointer;
+  display: block;
+  font-family: 'Satisfy', cursive;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+  color: black;
+}
+
+.section-title {
+  font-size: 30px;
+  padding-bottom: 20px;
+}
+
+#about-text {
+  font-size: 20px;
+  text-align: center;
+}
+
+#about-header {
+  text-align: center;
+}
+
+/* Break space */
+.space {
+  margin-top: 50px;
+}
+
+body {
+  text-align: center;
+}
+
+/* Home */
+/* section #foto1{
+  background-image: url(../src/assets/brothers.JPG);
+} */
+
+/* #photo2{
+  background-image: url(../src/assets/moth.JPG);
+}
+
+#photo3{
+  background-image: url(../src/assets/robo.JPG);
+} */
+
+/* Thoughts */
+
+/* About */
+
+
+/* Affect All */
+h1{
+  text-align: center;
+  font-family: 'Satisfy', cursive;
+}
+
+
+
+/* footer */
+footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
+footer div ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  /* padding: 10px; */
+}
+
+footer div li a {
+  text-decoration: none;
+  color: white;
+  /* padding: 10px; */
+  margin: 30px;
+  font-weight: lighter;
+  /* font-size: 16px; */
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  /* border-bottom: 3px solid; */
+  cursor: pointer;
+}
+
+/* Media Queries */
